[package]
name = "rust_agent_runtime"
version = "0.1.0"
edition = "2024"

[lib]
name ="rust_agent_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features=["extension-module"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
tokio = { version = "1", features=["full"] }
